BUG Aligned Buttons

--- a/quotes/css/styles.css
+++ b/quotes/css/styles.css
@@ -15,3 +15,8 @@ html {
 }
 
 
+.something {
+    display: inline;
+}
+
+
